--- a/deadco-setlist-game/package.json
+++ b/deadco-setlist-game/package.json
@@ -9,11 +9,11 @@
     "start": "next start",
     "lint": "next lint"
   },
-
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@headlessui/react": "^2.2.6",
     "@supabase/supabase-js": "^2.52.0",
     "framer-motion": "^12.23.6",
     "lottie-react": "^2.4.1",
