--- a/deadco-setlist-game/package.json
+++ b/deadco-setlist-game/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.52.0",
     "framer-motion": "^12.23.6",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.526.0",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dnd": "^16.0.1",
