--- a/deadco-setlist-admin/package.json
+++ b/deadco-setlist-admin/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.52.1",
+    "date-fns": "^4.1.0",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
