--- a/deadco-setlist-game/package.json
+++ b/deadco-setlist-game/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@headlessui/react": "^2.2.6",
+    "@stripe/stripe-js": "^7.7.0",
     "@supabase/supabase-js": "^2.52.0",
     "framer-motion": "^12.23.6",
     "lottie-react": "^2.4.1",
@@ -23,7 +24,8 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "stripe": "^18.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
